--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="lib/jetty-util-9.2.0.M0.jar"/>
 	<classpathentry kind="lib" path="lib/json-20140107.jar"/>
 	<classpathentry kind="lib" path="lib/javax.servlet-api-3.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.19.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
